
@startuml
skinparam groupInheritance 2

entity Account {
  Username : varchar
  Email : varchar
  Password : varchar
  Registration_Date : date
  Profile_Picture : varchar
  Birth_Date : date
  Address : varchar
  
  ..constraints..
  (Username NOT NULL)
  (Email NOT NULL)
  (Email UNIQUE)
  (Registration_Date NOT NULL)
}

entity User {
}

entity Admin {
}

entity Auction {
  Title : varchar
  Description : varchar
  Start_Date : date
  End_Date : date
  Status : enum
  Minimum_Bid : decimal
  Image : varchar
  
  ..constraints..
  (Title NOT NULL)
  (Start_Date NOT NULL)
  (End_Date >= Start_Date + 1 day)
  (Status DEFAULT active)
  (Minimum_Bid DEFAULT 0)
}

entity Category {
  Category_Name : varchar
  
  ..constraints..
  (Category_Name NOT NULL)
  (Category_Name UNIQUE)
}

entity Bid {
  Bid_Amount : decimal
  Bid_Date : datetime
  
  ..constraints..
  (Bid_Amount NOT NULL)
  (Bid_Date NOT NULL)
}

entity Rating {
  Rating_Score : int
  Rating_Comment : text
  Rating_Date : date
  
  ..constraints..
  (Rating_Score NOT NULL)
  (0 <= Rating_Score <= 5)
  (Rating_Date NOT NULL)
}

entity Comment {
  Comment_Text : text
  Comment_Date : datetime
  
  ..constraints..
  (Comment_Text NOT NULL)
  (Comment_Date NOT NULL)
}

entity Report {
  Report_Reason : text
  Report_Date : date
  Status : enum
  
  ..constraints..
  (Report_Reason NOT NULL)
  (Report_Date NOT NULL)
  (Status DEFAULT not_processed)
}

entity Notification {
  Notification_Text : text
  Notification_Date : datetime
  Notification_Type : enum
  
  ..constraints..
  (Notification_Text NOT NULL)
  (Notification_Date NOT NULL)
  (Notification_Type DEFAULT generic)
}

entity Transaction {
  Amount : decimal
  Transaction_Date : date
  
  ..constraints..
  (Amount NOT NULL)
  (Transaction_Date NOT NULL)
}

Account <|-- User : {complete; disjoint}
Account <|-- Admin
User "1" -- "0..*" Auction : creates
Auction "1" -- "0..*" Bid : receives
Bid "1" <-- "1" Auction : is_highest
User "1" -- "0..*" Bid : places
Auction "1" -- "0..*" Comment : receives
User "1" -- "0..*" Comment : writes
Category "1" -- "0..*" Auction : categorizes
Auction "1" -- "0..*" Rating : is_rated_on
User "1" -- "0..*" Rating : gives
User "1" -- "0..*" Rating : receives
Auction "1" -- "0..*" Report : has_report
User "1" -- "0..*" Report : reports
User "1" -- "0..*" Notification : receives
Auction "1" -- "0..1" Transaction : results_in
User "1" -- "0..*" Transaction : buys
User "1" -- "0..*" Transaction : sells


hide empty members

@enduml
